webapp/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-service
  labels:
    app: hello-world
spec:
  type: ClusterIP
  selector:
    app: hello-world
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
